--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
- .one{
-	font-size: 28px;
-    font-family: Monaco, Courier, monospace;
-    color: #618ad2;
-    transition: color .5s;
+body{
+	max-width: 740px;
+	margin: auto;
 }
-	
+
+.navigation li{
+	display: inline;
+}
+
+img{
+	max-width: 100%;
+}
